--- a/module/config/i18n/zh-CN.json
+++ b/module/config/i18n/zh-CN.json
@@ -2522,6 +2522,10 @@
       "help": "选择需要更新的仪表盘数据",
       "all": "更新全部",
       "main": "仅石油、物资、钻石、魔方"
+    },
+    "EventTime": {
+      "name": "活动状态",
+      "help": "是否在活动时间内"
     }
   },
   "Oil": {
