Opt: add new AzurLaneUncensored Repository

--- a/module/config/i18n/en-US.json
+++ b/module/config/i18n/en-US.json
@@ -2422,7 +2422,7 @@
     },
     "Repository": {
       "name": "AzurLaneUncensored Repository",
-      "help": "Do not need to modify\nGithub: <https://github.com/LmeSzinc/AzurLaneUncensored>\nCN mirror: <https://e.coding.net/llop18870/alas/AzurLaneUncensored.git>"
+      "help": "Do not need to modify\nGithub: <https://github.com/LmeSzinc/AzurLaneUncensored>\nCN mirror: <https://gitee.com/MengNianxiaoyao/AzurLaneUncensored.git>\nCN mirror2: <https://e.coding.net/llop18870/alas/AzurLaneUncensored.git>"
     }
   },
   "GameManager": {
