--- a/module/config/i18n/zh-CN.json
+++ b/module/config/i18n/zh-CN.json
@@ -2103,7 +2103,11 @@
   "DashboardUpdate": {
     "_info": {
       "name": "更新仪表盘",
-      "help": "大世界相关数据不支持更新"
+      "help": "大世界以及共斗相关数据不支持更新"
+    },
+    "Raid": {
+      "name": "共斗活动",
+      "help": "共斗活动期间请开启选项"
     },
     "Update": {
       "name": "更新选项",
