--- a/module/config/i18n/zh-TW.json
+++ b/module/config/i18n/zh-TW.json
@@ -2105,6 +2105,10 @@
       "name": "DashboardUpdate._info.name",
       "help": "DashboardUpdate._info.help"
     },
+    "Raid": {
+      "name": "DashboardUpdate.Raid.name",
+      "help": "DashboardUpdate.Raid.help"
+    },
     "Update": {
       "name": "DashboardUpdate.Update.name",
       "help": "DashboardUpdate.Update.help",
