--- a/module/config/i18n/zh-CN.json
+++ b/module/config/i18n/zh-CN.json
@@ -2105,6 +2105,12 @@
       "name": "更新仪表盘",
       "help": "大世界以及共斗相关数据不支持更新"
     },
+    "Event": {
+      "name": "活动确认",
+      "help": "当前活动为普通活动或共斗",
+      "event": "普通活动",
+      "raid": "共斗"
+    },
     "Update": {
       "name": "更新选项",
       "help": "选择需要更新的仪表盘数据",
