--- a/module/config/i18n/ja-JP.json
+++ b/module/config/i18n/ja-JP.json
@@ -2423,6 +2423,10 @@
     "Repository": {
       "name": "反和谐仓库",
       "help": "一般不需要修改\n仓库 https://github.com/LmeSzinc/AzurLaneUncensored\n国内镜像（默认） https://gitee.com/LmeSzinc/AzurLaneUncensored"
+    },
+    "Remove": {
+      "name": "AzurLaneUncensored.Remove.name",
+      "help": "AzurLaneUncensored.Remove.help"
     }
   },
   "GameManager": {
