--- a/module/config/i18n/zh-TW.json
+++ b/module/config/i18n/zh-TW.json
@@ -2423,6 +2423,10 @@
     "Repository": {
       "name": "反和諧倉庫",
       "help": "一般不需要修改\n倉庫(預設) https://github.com/LmeSzinc/AzurLaneUncensored"
+    },
+    "Remove": {
+      "name": "AzurLaneUncensored.Remove.name",
+      "help": "AzurLaneUncensored.Remove.help"
     }
   },
   "GameManager": {
