--- a/module/config/i18n/zh-CN.json
+++ b/module/config/i18n/zh-CN.json
@@ -2423,6 +2423,10 @@
     "Repository": {
       "name": "反和谐仓库",
       "help": "一般不需要修改\n仓库（默认） https://github.com/LmeSzinc/AzurLaneUncensored"
+    },
+    "Remove": {
+      "name": "移除补丁",
+      "help": "移除舰名反和谐补丁"
     }
   },
   "GameManager": {
