Fix: 修正语言文件

--- a/module/config/i18n/zh-CN.json
+++ b/module/config/i18n/zh-CN.json
@@ -2427,7 +2427,7 @@
     },
     "Option": {
       "name": "反和谐设置",
-      "help": "选中需要的反和谐文件",
+      "help": "选择需要的反和谐文件",
       "all": "全部反和谐",
       "main": "普通反和谐",
       "only_patch": "仅舰名反和谐"
