--- a/module/config/i18n/zh-TW.json
+++ b/module/config/i18n/zh-TW.json
@@ -2493,7 +2493,7 @@
     },
     "DisabledTask": {
       "name": "禁用倍率的项目",
-      "help": "会关闭倍率的项目，建议敏感项目全关。打开的项目导致封号后果自负。\n敏感项目：共斗，Meta与演习",
+      "help": "会关闭倍率的项目，建议敏感项目全关。打开的项目导致封号后果自负。\n敏感项目：共斗，極地風暴，Meta与演习",
       "disable_guild_and_dangerous": "禁用大舰队以及敏感项目",
       "disable_all_dangerous_task": "禁用敏感项目",
       "disable_meta_and_exercise": "禁用Meta和演习",
@@ -2524,6 +2524,10 @@
     },
     "Ash": {
       "name": "餘燼信標",
+      "help": ""
+    },
+    "Coalition": {
+      "name": "極地風暴",
       "help": ""
     }
   },
