--- a/module/config/i18n/en-US.json
+++ b/module/config/i18n/en-US.json
@@ -2616,7 +2616,9 @@
       "Running": "Running",
       "Pending": "Pending",
       "Waiting": "Waiting",
-      "NoTask": "No Task",
+      "NoTask": "No Task"
+    },
+    "Dashboard": {
       "SecondsAgo": "Seconds ago",
       "MinutesAgo": "Minutes ago",
       "HoursAgo": "Hours ago",
