--- a/module/config/i18n/zh-TW.json
+++ b/module/config/i18n/zh-TW.json
@@ -2535,6 +2535,10 @@
       "name": "确认GG面板出现的时间",
       "help": "设备越卡，重启游戏时GG面板出现的越晚，此时需要设置更长的阈值，单位秒。默认为5秒"
     },
+    "GGLowLimit": {
+      "name": "最低战力阈值",
+      "help": "前排舰队最低战力，低于此战力将不会进行出击"
+    },
     "DisabledTask": {
       "name": "禁用倍率的项目",
       "help": "会关闭倍率的项目，建议敏感项目全关。打开的项目导致封号后果自负。\n敏感项目：共斗，極地風暴，Meta与演习",
