--- a/module/config/i18n/en-US.json
+++ b/module/config/i18n/en-US.json
@@ -2518,8 +2518,7 @@
     "GGMethod": {
       "name": "GG操作方法",
       "help": "使用截图时，将GG悬浮窗遮挡住石油图标(请将透明度调至90%以上)，如为手动还需要指定好lua路径",
-      "screenshot": "截图",
-      "u2": "uiautomator2"
+      "screenshot": "截图"
     },
     "GGAction": {
       "name": "倍率操作方式",
