--- a/module/config/i18n/ja-JP.json
+++ b/module/config/i18n/ja-JP.json
@@ -2236,7 +2236,8 @@
       "name": "OpsiAshBeacon.AttackMode.name",
       "help": "OpsiAshBeacon.AttackMode.help",
       "current": "current",
-      "current_dossier": "current_dossier"
+      "current_dossier": "current_dossier",
+      "dossier": "dossier"
     },
     "OneHitMode": {
       "name": "OpsiAshBeacon.OneHitMode.name",
