--- a/module/config/i18n/zh-CN.json
+++ b/module/config/i18n/zh-CN.json
@@ -2236,7 +2236,8 @@
       "name": "余烬信标",
       "help": "",
       "current": "当期",
-      "current_dossier": "当期 + 档案"
+      "current_dossier": "当期 + 档案",
+      "dossier": "档案"
     },
     "OneHitMode": {
       "name": "一击即走",
