--- a/module/config/i18n/zh-TW.json
+++ b/module/config/i18n/zh-TW.json
@@ -2238,7 +2238,8 @@
       "name": "餘燼信標",
       "help": "",
       "current": "當期",
-      "current_dossier": "當期 + 檔案"
+      "current_dossier": "當期 + 檔案",
+      "dossier": "dossier"
     },
     "OneHitMode": {
       "name": "一擊即走",
