--- a/module/config/i18n/en-US.json
+++ b/module/config/i18n/en-US.json
@@ -2238,7 +2238,8 @@
       "name": "META Attack",
       "help": "",
       "current": "Current",
-      "current_dossier": "Current + Dossier"
+      "current_dossier": "Current + Dossier",
+      "dossier": "dossier"
     },
     "OneHitMode": {
       "name": "One Hit Mode",
