add option to solve scanning device in CL1

--- a/module/config/i18n/en-US.json
+++ b/module/config/i18n/en-US.json
@@ -2429,6 +2429,10 @@
       "0": "No Specification",
       "44": "44 | West Continental Shelf D",
       "22": "22 | NA Ocean SW Sector B"
+    },
+    "SolveScanningDevice": {
+      "name": "OpsiHazard1Leveling.SolveScanningDevice.name",
+      "help": "OpsiHazard1Leveling.SolveScanningDevice.help"
     }
   },
   "Daemon": {
