--- a/module/config/i18n/zh-CN.json
+++ b/module/config/i18n/zh-CN.json
@@ -2429,6 +2429,10 @@
       "0": "不指定",
       "44": "44 | 西大陆架D",
       "22": "22 | NA海域西南B"
+    },
+    "SolveScanningDevice": {
+      "name": "使用塞壬探测装置",
+      "help": ""
     }
   },
   "Daemon": {
