--- a/module/config/i18n/zh-CN.json
+++ b/module/config/i18n/zh-CN.json
@@ -2170,13 +2170,17 @@
   "DashboardUpdate": {
     "_info": {
       "name": "更新仪表盘",
-      "help": "大世界以及共斗相关数据不支持更新"
+      "help": "大世界相关数据不支持更新"
     },
     "Update": {
       "name": "更新选项",
       "help": "选择需要更新的仪表盘数据",
       "all": "更新全部",
       "main": "仅石油、物资、钻石、魔方"
+    },
+    "NewUi": {
+      "name": "使用新UI",
+      "help": ""
     }
   },
   "OpsiAshAssist": {
