--- a/module/config/i18n/ja-JP.json
+++ b/module/config/i18n/ja-JP.json
@@ -2177,6 +2177,10 @@
       "help": "DashboardUpdate.Update.help",
       "all": "DashboardUpdate.Update.all",
       "main": "DashboardUpdate.Update.main"
+    },
+    "NewUi": {
+      "name": "DashboardUpdate.NewUi.name",
+      "help": "DashboardUpdate.NewUi.help"
     }
   },
   "OpsiAshAssist": {
