--- a/module/config/i18n/zh-TW.json
+++ b/module/config/i18n/zh-TW.json
@@ -2505,13 +2505,13 @@
       "name": "GG管理器",
       "help": ""
     },
-    "Enabled": {
-      "name": "启用该功能",
-      "help": "演习，共斗，Meta信标时会自动关闭倍率"
+    "Enable": {
+      "name": "GGHandler.Enable.name",
+      "help": "GGHandler.Enable.help"
     },
-    "GGFactorEnable": {
-      "name": "启用倍率",
-      "help": "总开关，打开后才会开启倍率"
+    "GGPopup": {
+      "name": "弹窗处理",
+      "help": "若GG打开则应该启用以防弹窗卡重启"
     },
     "RestartEverytime": {
       "name": "每次启动Alas时重启",
