--- a/module/config/i18n/zh-CN.json
+++ b/module/config/i18n/zh-CN.json
@@ -2565,7 +2565,7 @@
   "PowerLimit": {
     "_info": {
       "name": "战力限制",
-      "help": "运行敏感项目前的最后一道保险\n若前排战力高于此值强制重启，并视为需要使用GG（打开GG开关以及GG自动重启倍率开关）"
+      "help": "运行敏感项目前的最后一道保险\n若前排战力高于此值强制重启"
     },
     "Exercise": {
       "name": "演习",
