--- a/module/config/i18n/ja-JP.json
+++ b/module/config/i18n/ja-JP.json
@@ -2511,7 +2511,7 @@
     },
     "GGPopup": {
       "name": "弹窗处理",
-      "help": "若GG打开则应该启用以防弹窗卡重启"
+      "help": "若手动使用GG则应该启用以防弹窗卡重启"
     },
     "RestartEverytime": {
       "name": "每次启动Alas时重启",
