--- a/module/config/i18n/zh-TW.json
+++ b/module/config/i18n/zh-TW.json
@@ -1987,6 +1987,16 @@
       "help": ""
     }
   },
+  "DashboardUpdate": {
+    "_info": {
+      "name": "更新儀表盤",
+      "help": "大世界相關數據不支援更新"
+    },
+    "Update": {
+      "name": "全部更新",
+      "help": "若取消，則僅更新石油、物資、鑽石、魔方"
+    }
+  },
   "Daily": {
     "_info": {
       "name": "每日任務",
@@ -2165,18 +2175,6 @@
     "OpponentRefreshRecord": {
       "name": "演習對手刷新紀錄時間",
       "help": ""
-    }
-  },
-  "DashboardUpdate": {
-    "_info": {
-      "name": "更新儀表盤",
-      "help": "大世界相關數據不支援更新"
-    },
-    "Update": {
-      "name": "更新選項",
-      "help": "選擇需要更新的儀表盤數據",
-      "all": "更新全部",
-      "main": "僅石油、物資、鑽石、魔方"
     }
   },
   "OpsiAshAssist": {
