--- a/module/config/i18n/zh-CN.json
+++ b/module/config/i18n/zh-CN.json
@@ -2531,7 +2531,7 @@
     },
     "GGLuapathRecord": {
       "name": "lua路径记录",
-      "help": "第一次启动后将自动勾选，非设备更换、lua路径修改及倍率操作方式切换请勿取消"
+      "help": "自动勾选，非设备更换及lua路径修改请勿取消"
     },
     "GGPackageName": {
       "name": "GG包名",
@@ -2558,7 +2558,7 @@
   "PowerLimit": {
     "_info": {
       "name": "战力限制",
-      "help": "运行敏感项目前的最后一道保险\n若前排战力高于此值强制重启"
+      "help": "运行敏感项目前的最后一道保险，若前排战力高于此值强制重启"
     },
     "Exercise": {
       "name": "演习",
