--- a/module/config/i18n/zh-TW.json
+++ b/module/config/i18n/zh-TW.json
@@ -2531,7 +2531,7 @@
     },
     "GGLuapathRecord": {
       "name": "lua路径记录",
-      "help": "第一次启动后将自动勾选，非设备更换、lua路径修改及倍率操作方式切换请勿取消"
+      "help": "自动勾选，非设备更换及lua路径修改请勿取消"
     },
     "GGPackageName": {
       "name": "GG包名",
@@ -2558,7 +2558,7 @@
   "PowerLimit": {
     "_info": {
       "name": "戰力限制",
-      "help": "運行敏感項目前的最後一道保險\n若前排戰力高於此值強制重啟"
+      "help": "運行敏感項目前的最後一道保險，若前排戰力高於此值強制重啟"
     },
     "Exercise": {
       "name": "演習",
