--- a/module/config/i18n/en-US.json
+++ b/module/config/i18n/en-US.json
@@ -2531,7 +2531,7 @@
     },
     "GGLuapathRecord": {
       "name": "lua路径记录",
-      "help": "第一次启动后将自动勾选，非设备更换、lua路径修改及倍率操作方式切换请勿取消"
+      "help": "自动勾选，非设备更换及lua路径修改请勿取消"
     },
     "GGPackageName": {
       "name": "GG包名",
