--- a/module/config/i18n/ja-JP.json
+++ b/module/config/i18n/ja-JP.json
@@ -2539,7 +2539,7 @@
     },
     "GGWaitTime": {
       "name": "确认GG面板出现的时间",
-      "help": "设备越卡，重启游戏时GG面板出现的越晚，此时需要设置更长的阈值，单位秒。默认为5秒"
+      "help": "设备越卡，GG面板出现的越晚，需要设置更长的阈值，单位秒。默认为5秒"
     },
     "GGLowLimit": {
       "name": "最低战力阈值",
