--- a/module/config/i18n/en-US.json
+++ b/module/config/i18n/en-US.json
@@ -2501,7 +2501,7 @@
   "GGHandler": {
     "_info": {
       "name": "GG管理器",
-      "help": "将GG悬浮窗遮挡住石油图标(请将透明度调至90%以上)"
+      "help": "将GG悬浮窗遮挡住石油图标（请将透明度调至90%以上）"
     },
     "Enable": {
       "name": "启用倍率",
@@ -2538,7 +2538,7 @@
       "help": "GG安装后请自行前往/Android/data文件夹查看包名，应是com.一串乱码"
     },
     "GGWaitTime": {
-      "name": "确认GG面板出现的时间",
+      "name": "GG面板等待时间",
       "help": "设备越卡，GG面板出现的越晚，需要设置更长的阈值，单位秒。默认为5秒"
     },
     "GGLowLimit": {
